--- a/index.html
+++ b/index.html
@@ -80,5 +80,20 @@
             <p>Iva Boyd <br> <span>Founder & CEO, Huddle</span></p>
         </div>
     </section>
+
+    <!-- section 5 -->
+   <section class="fifth-sect">
+    <h2>Get easy access today</h2>
+    <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any question our support team would be happy to help you</p>
+    <form action="">
+        <div class="forms">
+            <label for="email">
+                <input type="text" placeholder="Enter email address" required>
+            </label>
+        </div>
+        <button>Get started for free</button>
+    </form>
+   </section>
+
 </body>
 </html>
