--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <!-- section 5 -->
    <section class="fifth-sect">
     <h2>Get easy access today</h2>
-    <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any question our support team would be happy to help you</p>
+    <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any <br> question our support team would be happy to help you</p>
     <form action="">
         <div class="forms">
             <label for="email">
