--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <title>holiday task</title>
 </head>
 <body>
@@ -62,8 +65,9 @@
     </section>
 
     <!-- section 4 -->
-    <img class="qoute" src="/assets/bg-quotes.png" alt="seventh-image">
     <section class="fourth-sect">
+        <img class="qoute" src="/assets/bg-quotes.png" alt="seventh-image">
+       <div class="box-container">
         <div class="box">
             <p>Fylo has improved our team productivity by <br> an order of magnitude. Since making the <br> switch our team has become a well-oiled <br> collaboration machine.</p>
             <img class="fourth" src="/assets/profile-1.jpg" alt="eight-image">
@@ -79,6 +83,7 @@
             <img class="fourth" src="/assets/profile-3.jpg" alt="eight-image">
             <p>Iva Boyd <br> <span>Founder & CEO, Huddle</span></p>
         </div>
+       </div>
     </section>
 
     <!-- section 5 -->
