--- a/index.html
+++ b/index.html
@@ -69,19 +69,22 @@
         <img class="qoute" src="/assets/bg-quotes.png" alt="seventh-image">
        <div class="box-container">
         <div class="box">
-            <p>Fylo has improved our team productivity by <br> an order of magnitude. Since making the <br> switch our team has become a well-oiled <br> collaboration machine.</p>
-            <img class="fourth" src="/assets/profile-1.jpg" alt="eight-image">
+            <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+            <div class="contain">
+                <img class="fourth" src="/assets/profile-1.jpg" alt="eight-image">
             <p>Satish Patel <br> <span>Founder & CEO, Huddle</span></p>
-        </div>
+            </div>
+            
+        </div> 
         <div class="box">
-            <p>Fylo has improved our team productivity by <br> an order of magnitude. Since making the <br> switch our team has become a well-oiled <br> collaboration machine.</p>
+            <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
             <img class="fourth" src="/assets/profile-2.jpg" alt="eight-image">
-            <p>Bruce McKenzie <br> <span>Founder & CEO, Huddle</span></p>
+            <p>Bruce McKenzie<span>Founder & CEO, Huddle</span></p>
         </div>
         <div class="box">
-            <p>Fylo has improved our team productivity by <br> an order of magnitude. Since making the <br> switch our team has become a well-oiled <br> collaboration machine.</p>
+            <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
             <img class="fourth" src="/assets/profile-3.jpg" alt="eight-image">
-            <p>Iva Boyd <br> <span>Founder & CEO, Huddle</span></p>
+            <p>Iva Boyd<span>Founder & CEO, Huddle</span></p>
         </div>
        </div>
     </section>
