third-section commit new change

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <img src="/assets/illustration-stay-productive.png" alt="sixth-image">
         <div class="content3">
             <h2>Stay productive wherever, <br> you are</h2>
-            <p> Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs. <br> <br>
-                Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments <br></p>
+            <p> Never let location be an issue when accessing your files. Fylo has you <br> covered for all of your file storage needs. <br> <br>
+                Securely share files and folders with friends, family and colleagues for live <br> collaboration. No email attachments <br></p>
         <a class="fylo" href="#how fylo works">See how Fylo works</a>
         </div>
     </section>
@@ -78,13 +78,18 @@
         </div> 
         <div class="box">
             <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
-            <img class="fourth" src="/assets/profile-2.jpg" alt="eight-image">
-            <p>Bruce McKenzie<span>Founder & CEO, Huddle</span></p>
+            <div class="contain">
+                <img class="fourth" src="/assets/profile-2.jpg" alt="eight-image">
+            <p>Bruce McKenzie <br> <span>Founder & CEO, Huddle</span></p>
+            </div>
+            
         </div>
         <div class="box">
             <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
-            <img class="fourth" src="/assets/profile-3.jpg" alt="eight-image">
-            <p>Iva Boyd<span>Founder & CEO, Huddle</span></p>
+            <div class="contain">
+                <img class="fourth" src="/assets/profile-3.jpg" alt="eight-image">
+            <p>Iva Boyd <br> <span>Founder & CEO, Huddle</span></p> 
+            </div>
         </div>
        </div>
     </section>
