--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <img src="/assets/illustration-stay-productive.png" alt="sixth-image">
         <div class="content3">
             <h2>Stay productive wherever, <br> you are</h2>
-            <p> Never let location be an issue when accessing your files. Fylo has you <br> covered for all of your file storage needs. <br> <br>
-                Securely share files and folders with friends, family and colleagues for live <br> collaboration. No email attachments <br></p>
+            <p> Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs. <br> <br>
+                Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments <br></p>
         <a class="fylo" href="#how fylo works">See how Fylo works</a>
         </div>
     </section>
@@ -98,14 +98,19 @@
    <section class="fifth-sect">
     <h2>Get easy access today</h2>
     <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any <br> question our support team would be happy to help you</p>
-    <form action="">
-        <div class="forms">
-            <label for="email">
-                <input type="text" placeholder="Enter email address" required>
-            </label>
-        </div>
+    <div class="forms">
+        <form action="">
+            <div class="forms">
+                <label for="email">
+                    <input type="text" placeholder="Enter email address" required>
+                </label>
+            </div>
+        </form>
+    <div class="buttons">
         <button>Get started for free</button>
-    </form>
+    </div>
+    </div>
+
    </section>
 
 </body>
