--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/index.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
@@ -100,7 +101,7 @@
     <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any <br> question our support team would be happy to help you</p>
     <div class="forms">
         <form action="">
-            <div class="forms">
+            <div class="forms1">
                 <label for="email">
                     <input type="text" placeholder="Enter email address" required>
                 </label>
@@ -110,8 +111,47 @@
         <button>Get started for free</button>
     </div>
     </div>
+    </section>
 
-   </section>
+    <!-- section 6 -->
+    <section class="footer">
+        <div class="first-footer">
+            <img src="/assets/logo.svg" alt="for-footer">
+            <div class="inside-first">
+                <i class='bx bxs-edit-location'></i>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat hic sunt a at tempore mollitia velit inventore doloremque provident maxime.</p>
+            </div>
+        </div>
+        <div class="second-footer">
+            <i class='bx bx-phone-call'></i>
+            <i class='bx bx-envelope' ></i>
+            <div class="inside-second">
+                <p>+1-543-123-4567</p>
+                <p>example@fylo.com</p>
+            </div>
+        </div>
+        <div class="third-footer">
+            <ul>
+                <li>AboutUs</li>
+                <li>Jobs</li>
+                <li>Press</li>
+                <li>Blog</li>
+            </ul>
+            <div class="inside-third">
+                <ul>
+                    <li>Contact Us</li>
+                    <li>Terms</li>
+                    <li>Privacy</li>
+                </ul>
+            </div>
+        </div>
+        <div class="icon-sect">
+            <i class='bx bxl-twitter'></i>
+            <i class='bx bxl-facebook'></i>
+            <i class='bx bxl-instagram'></i>
+        </div>
+    </section>
+
 
 </body>
 </html>
