commit footer again
second footer commit

--- a/index.html
+++ b/index.html
@@ -114,19 +114,22 @@
     </section>
 
     <!-- section 6 -->
-    <section class="footer">
+    <footer>
         <div class="first-footer">
             <img src="/assets/logo.svg" alt="for-footer">
             <div class="inside-first">
                 <i class='bx bxs-edit-location'></i>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat hic sunt a at tempore mollitia velit inventore doloremque provident maxime.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur <br> adipisicing elit. Repellat hic sunt a at tempore <br> mollitia velit inventore doloremque provident maxime.</p>
             </div>
         </div>
         <div class="second-footer">
+           <div class="icon1">
             <i class='bx bx-phone-call'></i>
             <i class='bx bx-envelope' ></i>
+           </div>
             <div class="inside-second">
                 <p>+1-543-123-4567</p>
+
                 <p>example@fylo.com</p>
             </div>
         </div>
@@ -150,7 +153,7 @@
             <i class='bx bxl-facebook'></i>
             <i class='bx bxl-instagram'></i>
         </div>
-    </section>
+    </footer>
 
 
 </body>
