--- a/index.html
+++ b/index.html
@@ -116,42 +116,44 @@
     <!-- section 6 -->
     <footer>
         <div class="first-footer">
-            <img src="/assets/logo.svg" alt="for-footer">
+            <img class="logo2" src="/assets/logo.svg" alt="for-footer">
             <div class="inside-first">
                 <i class='bx bxs-edit-location'></i>
                 <p>Lorem ipsum dolor, sit amet consectetur <br> adipisicing elit. Repellat hic sunt a at tempore <br> mollitia velit inventore doloremque provident maxime.</p>
             </div>
         </div>
-        <div class="second-footer">
-           <div class="icon1">
-            <i class='bx bx-phone-call'></i>
-            <i class='bx bx-envelope' ></i>
-           </div>
-            <div class="inside-second">
-                <p>+1-543-123-4567</p>
-
-                <p>example@fylo.com</p>
-            </div>
-        </div>
-        <div class="third-footer">
-            <ul>
-                <li>AboutUs</li>
-                <li>Jobs</li>
-                <li>Press</li>
-                <li>Blog</li>
-            </ul>
-            <div class="inside-third">
-                <ul>
-                    <li>Contact Us</li>
-                    <li>Terms</li>
-                    <li>Privacy</li>
-                </ul>
-            </div>
-        </div>
-        <div class="icon-sect">
-            <i class='bx bxl-twitter'></i>
-            <i class='bx bxl-facebook'></i>
-            <i class='bx bxl-instagram'></i>
+        <div class="pick-all">
+            <div class="second-footer">
+                <div class="icon1">
+                 <i class='bx bx-phone-call'></i>
+                 <i class='bx bx-envelope' ></i>
+                </div>
+                 <div class="inside-second">
+                     <p>+1-543-123-4567</p>
+     
+                     <p>example@fylo.com</p>
+                 </div>
+             </div>
+             <div class="third-footer">
+                 <ul>
+                     <li>AboutUs</li>
+                     <li>Jobs</li>
+                     <li>Press</li>
+                     <li>Blog</li>
+                 </ul>
+                 <div class="inside-third">
+                     <ul>
+                         <li>Contact Us</li>
+                         <li>Terms</li>
+                         <li>Privacy</li>
+                     </ul>
+                 </div>
+             </div>
+             <div class="icon-sect">
+                 <i class='bx bxl-facebook'></i>
+                 <i class='bx bxl-twitter'></i>
+                 <i class='bx bxl-instagram'></i>
+             </div>
         </div>
     </footer>
 
